updated the index page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
   
   <h1>welcome to the official website of BMZ Project</h1>
+  <p>
+    BMZ Project is supervised by Esther who is based in Uganda. 
+    </>
   </html>
