I added supporters to the page file
Mercy and Nekesa

--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
   <p>
     BMZ Project is supervised by Esther who is based in Uganda. 
     </>
+  <p>The BMZ project is supported by Mercy Karagi and Stephanie Nekesa </p>
   </html>
